stored user name and email to redis, moved home page to templates

--- a/static/register.html
+++ b/static/register.html
@@ -9,16 +9,15 @@
                 <h1>Register with W+K Cycle</h1>
             </div>
             <div id="content">
-                <form method="post" action="/home">
+                <form method="post" action="/">
                   <label>Name</label>
-                  <input type="text" placeholder="First" name="firstname" />
-                  <input type="text" placeholder="Last" name="lastname" /> <br />
+                  <input type="text" placeholder="First" name="first_name" />
+                  <input type="text" placeholder="Last" name="last_name" /> <br />
                   <label>Email</label>
-                  <input type="text" name="email" /><br />
+                  <input type="text" size="47" name="email_address" /><br />
                   <input type="submit" value="Register">
                 </form>
             </div>
         </div>
     </body>
 </html>
- 
